spec/fixtures/kubernetes_configuration/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: acceptance-tests-date-ingress
  namespace: formbuilder-services-test-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/custom-http-errors: "400, 401, 403, 404, 500, 503"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
      location /metrics {
        deny all;
        return 401;
      }
spec:
  tls:
    - hosts:
      - acceptance-tests-date.dev.test.form.service.justice.gov.uk
      secretName: tls-certificate
  rules:
  - host: acceptance-tests-date.dev.test.form.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: acceptance-tests-date
          servicePort: 3000
