spec/fixtures/kubernetes_configuration/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: acceptance-tests-date
  name: acceptance-tests-date
  namespace: formbuilder-services-test-dev
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: acceptance-tests-date
